--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/pwa": "^0.12.4",
     "@angular/router": "~7.2.0",
     "@angular/service-worker": "~7.2.0",
+    "codelyzer": "^5.1.2",
     "core-js": "^2.5.4",
     "karma": "^4.3.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
@@ -32,7 +33,6 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "lodash": "^4.17.15",
     "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -45,6 +45,7 @@
     "angular-cli-ghpages": "0.5.3",
     "karma-chrome-launcher": "^3.1.0",
     "ts-node": "~7.0.0",
+    "tslib": "^1.10.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
   }
