--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "si-nine-mens-morris",
+  "name": "nine-mens-morris",
   "short_name": "AI Morris",
   "theme_color": "#3f51b5",
   "background_color": "#fafafa",
