--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@angular/service-worker": "~8.2.12",
     "codelyzer": "^5.1.2",
     "core-js": "^2.5.4",
-    "karma": "^4.3.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
@@ -43,7 +42,9 @@
     "@types/lodash": "^4.14.123",
     "@types/node": "^8.9.5",
     "angular-cli-ghpages": "0.6.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.1",
     "ts-node": "~7.0.0",
     "tslib": "^1.10.0",
     "tslint": "~5.11.0",
