get jest and the build working together

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,16 +1,16 @@
 {
-    "extends": "../tsconfig.json",
+    "extends": "./tsconfig.json",
     "compilerOptions": {
         "outDir": "../out-tsc/spec",
         "module": "commonjs",
         "target": "es5",
         "baseUrl": "",
         "types": [
-            "node"
+            "node",
+            "jest"
         ]
     },
     "files": [
-        "test.ts",
         "polyfills.ts"
     ],
     "include": [
