--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-builders/jest": "^8.2.0",
     "@angular/animations": "~8.2.12",
     "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.12",
@@ -25,12 +26,11 @@
     "@angular/pwa": "^0.803.14",
     "@angular/router": "~8.2.12",
     "@angular/service-worker": "~8.2.12",
+    "@types/jest": "^24.0.21",
     "codelyzer": "^5.1.2",
     "core-js": "^2.5.4",
-    "karma-coverage-istanbul-reporter": "^2.1.0",
-    "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "karma-typescript": "^4.1.1",
+    "jest": "^24.9.0",
+    "jest-junit": "^9.0.0",
     "lodash": "^4.17.15",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
@@ -40,14 +40,9 @@
     "@angular/cli": "~8.3.14",
     "@angular/compiler-cli": "~8.2.12",
     "@angular/language-service": "~8.2.12",
-    "@types/jasmine": "^3.4.4",
     "@types/lodash": "^4.14.123",
     "@types/node": "^8.9.5",
     "angular-cli-ghpages": "0.6.0",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.1",
-    "karma-spec-reporter": "0.0.32",
     "ts-node": "~7.0.0",
     "tslib": "^1.10.0",
     "tslint": "~5.11.0",
